Fix overflow

--- a/docs/css/component/_tournament.scss
+++ b/docs/css/component/_tournament.scss
@@ -10,6 +10,7 @@
         margin: 0;
         height: 38.4rem;
         width: 38.4rem;
+        max-width: 100%;
         background-image: url("images/cross.png");
         background-repeat: repeat;
         background-size: 3.6rem;
