--- a/docs/style.css
+++ b/docs/style.css
@@ -5006,6 +5006,7 @@ MODIFIER
   margin: 0;
   height: 38.4rem;
   width: 38.4rem;
+  max-width: 100%;
   background-image: url("images/cross.png");
   background-repeat: repeat;
   background-size: 3.6rem;
